# sdl_minimal

./: CMakeLists.txt  Makefile  README.md  main.cpp
data/: debug.sh  run.sh
src/: BasicSdlView.cc  BasicSdlView.hh  BasicSdlView.hxx  Box.hh  Box.hxx  CMakeLists.txt  ColoredFont.hh  ComparisonUtils.hh  ComparisonUtils.hxx  Content.cc  Content.hh  Font.cc  Font.hh  FontException.hxx  FontFactory.hh  FontFactory.hxx  GenericWidget.cc  GenericWidget.hh  SdlApplication.cc  SdlApplication.hh  SdlApplication.hxx  SdlEventHandler.cc  SdlEventHandler.hh  SdlEventHandler.hxx  SdlEventListener.cc  SdlEventListener.hh  SdlEventListener.hxx  SdlException.hh  SdlException.hxx  SdlWidget.cc  SdlWidget.hh  SdlWidget.hxx  Vector2.hh  Vector2.hxx
src/app/: ArgumentsException.cpp  ArgumentsException.h  ArgumentsParser.cpp  ArgumentsParser.h  CMakeLists.txt
src/view/: CMakeLists.txt  ColoredFont.hxx  Font.hh  Font.hxx  FontException.hh  SdlException.hh  Vector2.hxx
